fix: bg image movement when scrolling on mobile

--- a/assets/styles/blocks/_hero.scss
+++ b/assets/styles/blocks/_hero.scss
@@ -1,12 +1,12 @@
-@use '../helpers' as *;
+@use "../helpers" as *;
 
 .hero {
     --columnCount: 2;
 
     display: flex;
     align-items: center;
-    min-height: 100vh;
-    background: url('../images/hero-bg.webp') center/cover no-repeat;
+    min-height: 100lvh;
+    background: url("../images/hero-bg.webp") center/cover no-repeat;
     background-attachment: fixed;
     color: var(--color-white);
     text-align: center;
@@ -43,7 +43,7 @@
         color: var(--color-white);
         margin-bottom: fluid(30, 16);
     }
-    
+
     &__image img {
         margin: 0 auto;
     }
